src/views/LandingPage/LandingPage.styl
/*
 * Copyright (C) 2012-2020  Online-Go.com
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

:root {
    --ROCKETWIDTH: "min(20vw, 10rem)" % "";
    --ROCKETHEIGHT: calc(var(--ROCKETWIDTH) * 3);
}

#LandingPage {
    position: absolute;
    background-color: #001533;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    align-content: center;
    justify-content: center;
    align-items: stretch;
    overflow: hidden;

    +portrait() {
        flex-direction: column;
    }

    .spacer {
        flex-grow: 0;
        flex-shrink: 1;
        +portrait() {
            height: "calc((100vh - 100vw) / 2)" % "";
        }
        +landscape() {
            width: "calc((100vw - 100vh) / 2)" % "";
        }
    }

    .mountain-background {
        flex-grow: 1;
        position: relative;
        text-align: center;
        background-image: url("/1.0/pages/home/background_with_logos_and_no_raccoon_2_19_2026.svg");
        background-repeat: no-repeat;
    }

    .stars-animation {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        pointer-events: none;
        z-index: 2;
    }

    .raccoon-animation {
        position: absolute;
        bottom: 10%;
        left: 50%;
        transform: translateX(-49%);
        width: 32%;
        pointer-events: none;
        z-index: 3;
    }

    .logo {
        position: absolute;
        text-align: center;
        background-image: url("/1.0/pages/home/kidsgoserver.svg");
        background-repeat: no-repeat;
        display: inline-block;
        width: 80%;
        height: 80%;
        left: 10%;
    }

    .learn-to-play-rocket, .play-rocket {
        position: absolute;
        bottom: calc(var(--ROCKETHEIGHT) * 0.1 + 0.8rem);
        width: var(--ROCKETWIDTH);
        text-align: center;
        height: var(--ROCKETHEIGHT);
        z-index: z.rocket;
        cursor: pointer;

        .rocket-animation {
            position: absolute;
            top: 15%;
            left: 50%;
            width: 600%;
            height: 2500%;
            transform: translate(-50%, -50%);
            pointer-events: none;
        }

    }

    // Positioned relative to the square mountain-background so the popup lands
    // between the rocket and the raccoon regardless of viewport aspect ratio.
    // Proportions measured from the reference video.
    .rocket-popup {
        position: absolute;
        bottom: 30%;
        width: 26%;
        aspect-ratio: 1;
        pointer-events: none;
        z-index: z.rocket + 1;
    }

    .learn-popup {
        left: 20%;
    }

    .play-popup {
        right: 20%;
    }

    .learn-to-play-rocket {
        left: 5vw;
    }

    .play-rocket {
        right: 5vw;
    }
}

